# claude-code-statusline-pro

./: .gitattributes  .gitignore  2025-09-07-claude-codeusage.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md  biome.json  claude-code-statusline-pro-2.0.0-beta.1.tgz  claude-code-statusline-v2.js  claude-code-statusline.js  clippy.toml  config.js  config.md  config.toml  debug.cjs  debug_transcript.js  dist-workspace.toml  flow.md  package.json  rust-toolchain.toml  rustfmt.toml  statusline-config.js  statusline.config.toml  test-configurable.js  test-custom-component.sh  test-yescode-api.js  test-yescode-mvp.js  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/docs/: claude-api-pricing.md  issues-summary.md
.claude/docs/official/: README.md
.claude/docs/refactor/: 01-new-architecture-design.md  02-implementation-phases.md  03-migration-strategy.md  04-ui-specification.md  05-technical-details.md
.claude/docs/storage/: config-priority.md  data-formats.md  implementation.md  overview.md
.github/: dependabot.yml
.github/workflows/: build-binaries.yml  build.yml  release-candidate.yml  release.yml  rust-ci.yml  rust.yml
configs/: CLAUDE.md  config.storage.example.toml  config.template.toml
configs/components/: rate_limit.template.toml  usage.template.toml
custom-components/: CLAUDE.md  DEVELOPMENT.md  README.md  STDIN-DATA-GUIDE.md
custom-components/examples/clock/: README.md  clock.config.toml  clock.ts
docs/: CLAUDE.md  CUSTOM_COMPONENTS.md
docs/old-issues/: README.md
docs/rust-rewrite/: AI-DEVELOPER-PROMPT.md  README.md  architecture.md  core-modules.md  data-structures.md  git-storage.md  migration-plan.md  performance-testing.md  release-strategy.md
examples/custom-components/clock/: README.md  component.js  config.toml
npm/ccsp/: ccsp-3.0.0.tgz  index.js  install.js  package.json
npm/ccstatus/: index.js  install.js  manifest.json  package.json
npm/ccstatus/scripts/: prepare-binaries.js
npm/claude-code-statusline-pro/: index.js  install.js  package.json
rust/: .gitignore  Cargo.toml  README.md  SETUP_COMPLETE.md  clippy.toml  verify.bat  verify.sh
rust/src/: lib.rs  main.rs
src/: index.ts  lib.rs  main.rs  mock_data.rs
src/cli/: CLAUDE.md  component-config-mapper.ts  config-category-ui.ts  config-editor.ts  config.ts  i18n.ts  main.ts  message-icons.ts  mock-data.ts  preset-manager.ts  preview-engine.ts
src/cli/components/: example-usage.ts  index.ts  integration.ts  realtime-preview-selector.ts  test-runner.ts
src/cli/editors/: base-editor.ts  branch-editor.ts  component-editor.ts  index.ts  model-editor.ts  preset-editor.ts  status-editor.ts  style-editor.ts  theme-editor.ts  tokens-editor.ts  types.ts  usage-editor.ts
src/cli/utils/: preview-manager.ts  suggestion-manager.ts  validation-manager.ts
src/components/: CLAUDE.md  base.rs  base.ts  branch.rs  branch.ts  fake.ts  mod.rs  model.rs  model.ts  project.rs  project.ts  rate_limit.rs  status.rs  status.ts  tokens.rs  tokens.ts  usage.rs  usage.ts
src/components/widgets/: CLAUDE.md  api-widget.ts  base-widget.ts  static-widget.ts  widget-factory.ts
src/config/: CLAUDE.md  component-config-loader.ts  component_widgets.rs  loader.rs  loader.ts  migrator.ts  mod.rs  schema.rs  schema.ts
src/core/: CLAUDE.md  generator.rs  generator.ts  grid-system.ts  input.rs  mod.rs  multi-line-renderer.ts  multiline.rs  parser.ts
src/custom-components/: discovery.ts  integrator.ts  loader.ts  types.ts
src/git/: CLAUDE.md  cache.ts  index.ts  mod.rs  secure-executor.ts  service.rs  service.ts  types.rs  types.ts
src/proxy/: types.ts  yescode.ts
src/storage/: CLAUDE.md  config-loader-enhanced.ts  index.ts  manager.rs  manager.ts  mod.rs  project_resolver.rs  session-tracker.ts  types.rs  types.ts
src/terminal/: CLAUDE.md  colors.ts  detector.rs  detector.ts  mod.rs
src/themes/: CLAUDE.md  capsule.rs  classic.rs  engine.ts  index.ts  manager.ts  mod.rs  powerline.rs  types.ts
src/themes/renderers/: CLAUDE.md  capsule.ts  classic.ts  powerline.ts
src/tui/: app.rs  event.rs  io.rs  mod.rs  preview.rs  sections.rs  view.rs  widgets.rs
src/utils/: CLAUDE.md  date-formatter.ts  effort.rs  index.ts  mod.rs  project-resolver.ts  provider_profiles.rs
tests/: CLAUDE.md  cli_tests.rs  integration_test.rs  storage-system.test.ts  storage_tests.rs
tests/unit/config/: schema.branch.test.ts
tests/unit/git/: cache.test.ts
tests/utils/: git-mocks.ts  git-scenarios.ts  repo-fixtures.ts  test-helpers.ts
