[package]
name = "claude-code-statusline-pro"
version = "3.0.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["wangnov"]
license = "MIT"
description = "Enhanced statusline for Claude Code with 10x performance"
repository = "https://github.com/wangnov/claude-code-statusline-pro"
homepage = "https://github.com/wangnov/claude-code-statusline-pro"
readme = "README.md"
keywords = ["cli", "statusline", "claude", "terminal", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo", "color"] }

# Configuration & serialization
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal handling
crossterm = "0.28"

# System utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Git integration
git2 = "0.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
tempfile = "3.10"
proptest = "1.5"
serial_test = "3.1"

[[bin]]
name = "claude-code-statusline-pro"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
